--- a/aquariusswaptest15.5/index.html
+++ b/aquariusswaptest15.5/index.html
@@ -36,12 +36,12 @@
     .linkish{border:none;background:transparent;color:#9ab0ff;text-decoration:underline;padding:0;cursor:pointer}
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
 
-    /* Constrain and center swap/locker */
-    #swapBox, #lockerBox, #lockerCard { width:100%; max-width:520px; margin:0 auto; }
+    /* Constrain and center swap/locker, keep real gaps (480px as requested) */
+    #swapBox, #lockerCard { width:100%; max-width:480px; margin:0 auto; }
     #swapBox { margin-top:22px; position:relative; }
     #lockerCard { margin-top:26px; }
 
-    /* Modals */
+    /* Modals (center-align content) */
     .backdrop{position:fixed;inset:0;background:rgba(0,0,0,.55);display:none;z-index:9997}
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:9998;text-align:center}
     .open{display:flex}
@@ -56,10 +56,10 @@
 
     /* Swap card */
     .card-swap { border-radius:24px; padding:18px; position:relative; }
-    .card-swap .slab { background:#0f1520; border:1px solid #1b2633; border-radius:22px; padding:16px; margin-bottom:12px; }
+    .card-swap .slab { background:#0f1520; border:1px solid #1b2633; border-radius:22px; padding:16px; margin-bottom:12px; position:relative; }
     .slab-top { display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:6px; }
     .slab-label { font-size:14px; color:var(--muted); }
-    .slab-right { display:flex; flex-direction:column; align-items:flex-end; gap:4px; min-width:180px; }
+    .slab-right { display:flex; flex-direction:column; align-items:flex-end; gap:6px; min-width:180px; }
 
     .asset-chip { display:inline-flex; align-items:center; gap:10px; }
     .chip-pill { display:inline-flex; align-items:center; gap:5px; padding:6px 8px; border-radius:999px; border:1px solid #1e2831; background:#0e1419; color:#dfe8ff; }
@@ -114,9 +114,8 @@
 
     /* Swap balance popover */
     .avail-row{ display:flex; align-items:center; gap:6px; }
-    .avail-btn{ border:none; background:transparent; color:#9ab0ff; text-decoration:underline; padding:0; cursor:pointer; font-size:12px; font-weight:400; }
-    .avail-btn .label{ margin-right:4px; }
     .info-ico{ width:18px; height:18px; border-radius:50%; border:1px solid #2a3340; background:#0c1520; color:#cfe0ff; font-size:12px; display:inline-flex; align-items:center; justify-content:center; cursor:pointer; }
+
     .popover{ position:absolute; z-index:50; right:8px; top:64px; background:#0f1526; border:1px solid #26324a; border-radius:12px; padding:10px 12px; min-width:240px; max-width:320px; text-align:left; display:none; box-shadow:0 10px 30px rgba(0,0,0,.35); }
     .popover.open{ display:block; }
     .popover .line{ display:flex; justify-content:space-between; gap:10px; font-size:12px; color:#cfe0ff; padding:3px 0; }
@@ -128,7 +127,7 @@
     .rate-swap { display: inline-block; margin-left: 6px; opacity: 0.6; transition: opacity 0.2s, transform 0.2s; }
     .rate-line:hover .rate-swap { opacity: 1; transform: rotate(180deg); }
 
-    /* Hide native select */
+    /* Hide the native <select> – we keep it for internal logic */
     #swapFrom { display:none; }
 
     /* v4 toasts (top-right) */
@@ -177,23 +176,20 @@
     .slip-row{ display:flex; align-items:center; justify-content:center; gap:6px; }
     .slip-row input{ width:90px; text-align:center; }
 
-    /* Locker visuals */
-    #lockerCard { border-radius:24px; padding:18px; }
+    /* Locker visuals (also reused for "Usable" pill in Swap) */
     .locker-slab { background:#0f1520; border:1px solid #1b2633; border-radius:22px; padding:16px; margin-bottom:12px; position:relative; }
     .locker-pill{display:inline-flex;align-items:center;gap:6px;padding:5px 10px;border-radius:999px;background:#0e1627;border:1px solid #2a3656;color:#cfe0ff;font-size:12px}
     .locker-pill.apy{border-color:#3d2e6d;background:#1b1233;color:#d9caff;font-weight:600}
     .locker-right{display:flex;flex-direction:column;align-items:flex-end;gap:6px;margin-top:2px}
     .percent-btns button{padding:8px 10px;border-radius:10px}
+    #usablePill, #swapUsablePill {cursor:pointer}
 
-    /* Lock preview row tweaks for mobile fit */
-    .preview-row{display:flex;align-items:center;gap:4px;margin:2px 0}
-    .preview-row .label{min-width:68px} /* narrower labels */
-    @media (max-width:420px){
-      .preview-row .label{min-width:64px}
-    }
+    /* Lock preview row – tighter label so pill fits on one line (mobile) */
+.preview-row{display:flex;align-items:center;gap:4px;margin:2px 0}
+.preview-row .label{min-width:68px}
+@media (max-width:420px){ .preview-row .label{min-width:64px} }
 
-    #usablePill{cursor:pointer}
-    #usableInfo{ width:18px;height:18px;border-radius:50%;border:1px solid #2a3340;background:#0c1520;color:#cfe0ff;font-size:12px;display:inline-flex;align-items:center;justify-content:center;cursor:pointer }
+    /* Locker popover */
     #usablePopover{ position:absolute; z-index:50; right:8px; top:94px; background:#0f1526; border:1px solid #26324a; border-radius:12px; padding:10px 12px; min-width:240px; max-width:320px; text-align:left; display:none; box-shadow:0 10px 30px rgba(0,0,0,.35); }
     #usablePopover.open{ display:block; }
     #usablePopover .line{ display:flex; justify-content:space-between; gap:10px; font-size:12px; color:#cfe0ff; padding:3px 0; }
@@ -236,9 +232,9 @@
                 </button>
               </div>
               <div class="avail-row">
-                <button id="fillAvailBtn" class="avail-btn" style="display:none">
-                  <span class="label">Usable:</span><span id="availNum">0</span>
-                </button>
+                <!-- Usable pill (swap) -->
+                <span class="small muted">Usable:</span>
+                <span id="swapUsablePill" class="locker-pill" title="Tap to fill input">0</span>
                 <div id="availInfo" class="info-ico" title="Details">i</div>
               </div>
             </div>
@@ -246,8 +242,8 @@
 
           <input id="swapAmount" class="big-input" type="number" step="any" inputmode="decimal" placeholder="0" />
 
-          <!-- Percent buttons for Swap -->
-          <div class="row percent-btns" id="swapPercRow" style="margin-top:8px">
+          <!-- Swap % buttons -->
+          <div class="row percent-btns" style="justify-content:flex-end;margin-top:8px">
             <button data-sp="25" class="ghost small">25%</button>
             <button data-sp="50" class="ghost small">50%</button>
             <button data-sp="75" class="ghost small">75%</button>
@@ -298,6 +294,8 @@
       <!-- Locker -->
       <div class="section box" id="lockerCard">
         <h2 style="margin:0 0 8px">Locker</h2>
+
+        <!-- hidden pubkey (used internally) -->
         <input id="pubkey" type="hidden" />
 
         <!-- LOCK slab -->
@@ -306,7 +304,7 @@
             <div class="slab-label">Lock</div>
             <div class="asset-chip">
               <div class="chip-pill">
-                <span class="icon" style="background:#7d4bd1" aria-hidden="true"></span>
+                <img id="lockAquaIcon" class="icon" alt="AQUAm25" />
                 <span>AQUAm25</span>
               </div>
             </div>
@@ -317,7 +315,7 @@
             <div class="row" style="gap:8px;align-items:center">
               <span class="muted small">Usable:</span>
               <span id="usablePill" class="locker-pill" title="Tap to fill input">0.0000000</span>
-              <span id="usableInfo" title="Details">i</span>
+              <span id="usableInfo" title="Details" class="info-ico">i</span>
             </div>
             <div class="row percent-btns">
               <button data-p="25" class="ghost small">25%</button>
@@ -327,13 +325,16 @@
             </div>
           </div>
 
+          <!-- Hidden balance line kept for JS but not shown -->
+          <p class="small" style="margin-top:6px; display:none">AQUAm25 Balance: <b id="aquaBal">-</b></p>
+
           <!-- Amount -->
           <label for="amount">AQUAm25 Amount</label>
           <input id="amount" class="big-input" type="number" step="any" placeholder="0" inputmode="decimal" />
           <div id="usablePopover" role="dialog" aria-modal="false" aria-live="polite"></div>
         </div>
 
-        <!-- Duration slab -->
+        <!-- Duration slab (fixed 12 months) -->
         <div class="locker-slab">
           <div class="slab-top" style="margin-bottom:4px">
             <div class="slab-label">Duration</div>
@@ -346,23 +347,28 @@
 
         <!-- Preview slab -->
         <div class="locker-slab">
-          <div class="slab-label" style="margin-bottom:6px">Lock preview</div>
-          <div class="preview-row">
-            <span class="small muted label">Lock Start:</span>
-            <span id="whenStart" class="locker-pill">—</span>
-          </div>
-          <div class="preview-row">
-            <span class="small muted label">Lock End:</span>
-            <span id="whenEnd" class="locker-pill">—</span>
-          </div>
-          <div id="previewLine" class="small muted" style="margin-top:6px">Enter an amount to preview your lock.</div>
-        </div>
+<div class="locker-slab">
+  <div class="slab-label" style="margin-bottom:6px">Lock preview</div>
 
-        <!-- MATCHED Swap-style actions -->
-        <div class="actions">
-          <button id="signSubmitBtn" class="primary">Sign</button>
-          <button id="copyBtn" class="ghost small">Copy XDR</button>
-        </div>
+  <div class="preview-row">
+    <span class="small muted label">Lock Start:</span>
+    <span id="whenStart" class="locker-pill">—</span>
+  </div>
+
+  <div class="preview-row">
+    <span class="small muted label">Lock End:</span>
+    <span id="whenEnd" class="locker-pill">—</span>
+  </div>
+
+  <div id="previewLine" class="small muted" style="margin-top:6px">
+    Enter an amount to preview your lock.
+  </div>
+</div>
+
+<div class="actions">
+  <button id="signSubmitBtn" class="primary">Sign</button>
+  <button id="copyBtn" class="ghost small">Copy XDR</button>
+</div>
 
         <div class="toggle-row" style="margin-top:10px">
           <label for="xdrOut" style="margin:0">Locker Transaction XDR</label>
@@ -375,7 +381,9 @@
     </div>
   </div>
 
+  <!-- Old toast container (kept) -->
   <div class="toast-wrap" id="toastWrap" aria-live="polite"></div>
+  <!-- New v4 toast container (top-right) -->
   <div class="toast-v4-wrap" id="toastV4Wrap" aria-live="polite"></div>
 
   <!-- Connect Modal -->
@@ -473,38 +481,35 @@
     import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8";
     import QRCode     from "https://esm.sh/qrcode@1.5.3";
 
-    /* =========================
-       ALL JS from v14.8 remains
-       (quotes, WC/Freighter, trustline, etc.)
-       Only small additions below:
-       - swap % buttons handlers
-       - locker actions already wired
-       - preview spacing handled in CSS
-       ========================= */
-
+    // ---------- Shortcuts ----------
     const SDK = window.StellarSdk;
     if(!SDK) throw new Error("Stellar SDK failed to load.");
     const ServerCtor = (SDK.Horizon && SDK.Horizon.Server) || SDK.Server;
     if(!ServerCtor) throw new Error("Stellar SDK: Server constructor not found.");
     if(!SDK.rpc || !SDK.Address || !SDK.nativeToScVal) throw new Error("Stellar SDK UMD present but Soroban helpers missing");
 
+    // ---------- Config ----------
     const HORIZON    = "https://horizon.stellar.org";
     const NETWORK    = SDK.Networks.PUBLIC;
 
+    // Aquarius / Soroban
     const routerContractId = "CBQDHNBFBZYE4MKPWBSJOPIYLW4SFSXAXUTSXJN76GNKYVYPCKWC6QUK";
     const sorobanRpcUrl     = "https://mainnet.sorobanrpc.com";
     const baseApi           = "https://amm-api.aqua.network/api/external/v1";
     const networkPassphrase = NETWORK;
 
+    // AQUA / AQUAm25
     const AQUA_CODE   = "AQUA";
     const AQUA_ISSUER = "GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA";
     const AQUAm25_CODE   = "AQUAm25";
     const AQUAm25_ISSUER = "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC";
     const TRACKER_KEY    = "GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP";
 
+    // WalletConnect
     const PROJECT_ID = "f658ce3a7c8a185214974f71539fea39";
     const EXPLORER   = "https://explorer-api.walletconnect.com/v3/wallets";
 
+    // ---------- DOM ----------
     const $=(id)=>document.getElementById(id);
     const on=(el,ev,fn)=>el&&el.addEventListener(ev,fn);
     const isIOS=()=>/iPhone|iPad|iPod/i.test(navigator.userAgent);
@@ -515,11 +520,12 @@
     const qrArea=$("qrArea"), qrCanvas=$("qrCanvas"), linkStatus=$("linkStatus"), rawWcLink=$("rawWcLink");
 
     // Locker DOM
-    const pubkeyEl=$("pubkey"), aquaBalEl=document.createElement('div'), amountEl=$("amount"),
+    const pubkeyEl=$("pubkey"), aquaBalEl=$("aquaBal"), amountEl=$("amount"),
           whenStart=$("whenStart"), whenEnd=$("whenEnd"), previewLine=$("previewLine"),
           usablePill=$("usablePill"), usableInfo=$("usableInfo"), usablePopover=$("usablePopover");
     const xdrOut=$("xdrOut"), actionResult=$("actionResult");
     const signSubmitBtn=$("signSubmitBtn"), copyBtn=$("copyBtn");
+    const lockAquaIcon=$("lockAquaIcon");
 
     // Swap DOM
     const swapFrom=$("swapFrom"), swapAmount=$("swapAmount"),
@@ -531,13 +537,15 @@
           btnAddTrustline=$("btnAddTrustline"),
           sellIcon=$("sellIcon"), buyIcon=$("buyIcon"),
           openPickerBtn=$("openPicker"),
-          fillAvailBtn=$("fillAvailBtn"), availNum=$("availNum"),
           availInfo=$("availInfo"), availPopover=$("availPopover"),
-          slipBtn=$("slipBtn"), slipBadge=$("slipBadge");
+          slipBtn=$("slipBtn"), slipBadge=$("slipBadge"),
+          swapUsablePill=$("swapUsablePill");
 
+    // Picker DOM
     const pickerBackdrop=$("pickerBackdrop"), assetPicker=$("assetPicker"), pickerClose=$("pickerClose"), pickerBody=$("pickerBody");
     const sellLabel=$("sellLabel");
 
+    // Slippage modal
     const slipBackdrop=$("slipBackdrop"), slipModal=$("slipModal"), slipClose=$("slipClose"),
           slipSave=$("slipSave"), slipApplyCustom=$("slipApplyCustom"), slipCustom=$("slipCustom");
 
